landscape orientation was blocked on mobile and some small bugs were fixed

--- a/src/styles/index-styles/_impact-card.scss
+++ b/src/styles/index-styles/_impact-card.scss
@@ -26,7 +26,7 @@
     }
 
     @include media-with-max(470px) {
-        height: 15%;
+        height: 14%;
     }
 
     max-width: 500px;
